# invoice2storage

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: rust.yml
scripts/: .nix-cargo-inner  nix-cargo
src/: main.rs
test-data/: test_email1.eml  test_email1_broken.eml  test_email_no_attachment.eml  test_email_no_plus.eml
test-data/invoices/: sample1.ods
