[package]
name = "invoice2storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
backoff = { version = "0.4.0"}
base64 = "0.20.0"
clap = { version = "4.0.29", features = ["cargo", "string", "derive", "env"] }
lazy_static = "1.4.0"
log = "0.4.17"
mailparse = "0.14.0"
object_store = { version = "0.5.3", features = ["aws", "gcp", "azure", "http"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
stderrlog = "0.5.4"
tinytemplate = "1.2.1"
tokio = "1.23.0"
