[package]
name = "invoice2storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
# async-imap = { version = "0.6.0", features = ["runtime-tokio"], default-features = false }
#async-native-tls = { version = "0.4.0", default-features = false, features = ["runtime-tokio"] }
imap = { version = "2.4.1", default-features = false }
backoff = { version = "0.4.0"}
base64 = "0.21.0"
clap = { version = "4.0.29", features = ["cargo", "string", "derive", "env"] }
lazy_static = "1.4.0"
log = "0.4.17"
maildir = "0.6.1"
mailparse = "0.14.0"
# object_store = { version = "0.5.3", features = ["aws", "gcp", "azure", "http"] }
object_store = { git = "https://github.com/poelzi/arrow-rs", branch = "add-insecure", features = ["aws", "gcp", "azure", "http"] }
# serde = { version = "1.0.152", features = ["derive"] }
# serde_derive = "1.0.152"
stderrlog = "0.5.4"
tera = "1.17.1"
tokio = "1.23.0"
url = "2.3.1"
toml = "0.7.1"
serde = { version = "1.0.152", features = ["derive"] }
clap-serde-derive = "0.2.0"
resolve-path = "0.1.0"
rustls = { version = "0.20.8", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.2"

[dev-dependencies]
reqwest = { version = "0.11.14", features = ["rustls-tls", "blocking"], default-features = false }
walkdir = "2.3.2"
